tests/cases/traits/errors/trait-object-coerce-missing-impl.ari
trait Score {
  fn score(self) -> i64
}

fn main() -> i64 {
  let value: dyn Score = 7 as dyn Score;
  0
}
